added ticket db and createTicket
